# swaystatus

./: .build.yml  .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.builds/: test.yml
.github/workflows/: ci.yml  test.yml
requirements/: development.txt  production.txt
scripts/: build  check  coverage  format  install  lint  publish  rotate  test  upload  version
src/swaystatus/: __init__.py  app.py  args.py  block.py  cli.py  click_event.py  config.py  context.py  daemon.py  dataclasses.py  element.py  env.py  input.py  io.py  logger.py  logging.py  loop.py  module.py  modules.py  output.py  paths.py  status_line.py  subprocess.py  threading.py  threads.py  time.py  typing.py  updater.py
tests/: conftest.py  fake.py  test_app.py  test_args.py  test_block.py  test_cli.py  test_click_event.py  test_config.py  test_daemon.py  test_dataclasses.py  test_element.py  test_entry_points.py  test_env.py  test_input.py  test_logger.py  test_logging.py  test_module.py  test_modules.py  test_output.py  test_paths.py  test_status_line.py  test_threading.py  test_threads.py  test_updater.py  test_version.py
tests/data/: config.toml
tests/data/configs/: all.toml
tests/data/modules/: foobar.py  test.py
tests/fakes/: click_event.py
tests/modules/: no_output.py
tests2/: test_app.py  test_args.py  test_block.py  test_click_event.py  test_config.py  test_daemon.py  test_element.py  test_env.py  test_input.py  test_modules.py  test_output.py  test_threading.py
tests2/data/: config.toml
