[project]
name = "swaystatus"
version = "0.14.0"
description = "Generate a status line for swaybar"
readme = "README.md"
authors = [
    { name="Jeremy Cantrell", email="jmcantrell@gmail.com" }
]
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["sway", "wm", "status"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: Desktop Environment",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5,<8.0.0",
    "mypy>=1.20.0,<2.0.0",
    "ruff>=0.15.9,<0.16.0",
]

[project.urls]
"Homepage" = "https://sr.ht/~jmcantrell/swaystatus/"
"Repository" = "https://git.sr.ht/~jmcantrell/swaystatus"
"Bug Tracker" = "https://todo.sr.ht/~jmcantrell/swaystatus"

[project.scripts]
swaystatus = "swaystatus.cli:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["tests/**"]

[tool.coverage.run]
source = ["src/"]
omit = ["src/*/__main__.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
