[metadata]
name = swaystatus
version = 0.1.1
description = Generates a status line for swaybar
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sway, wm, status
author = Jeremy Cantrell
author_email = jmcantrell@gmail.com
url = https://gitlab.com/jmcantrell/swaystatus
license = GPL
license_file = LICENSE.md
platforms = linux
classifiers =
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: POSIX :: Linux
    Topic :: Desktop Environment :: Window Managers :: Sway
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    swaystatus
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    swaystatus = swaystatus.cli:main

[options.extras_require]
testing =
    pytest>=6.2.5
    pytest-cov>=2.12.1
    tox>=3.24.4
